Fix candidate panel size on mobile

--- a/sass/candidate.scss
+++ b/sass/candidate.scss
@@ -7,6 +7,10 @@
     position: fixed;
     transition: bottom .3s ease;
     width: 100vw;
+
+    @media only screen and (max-width: $breakpoint) {
+        font-size: .7em;
+    }
 }
 
 .candidate.mod-open {
